tests/errors/preasm_errors/mcr_macro_exists/macro_exists.as
; defining a macro with the same name twice
mcr original_name
mov r1, r2
endmcr

mcr original_name
mov r5, r2
endmcr